// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyOrganization Component renders correctly 1`] = `
<div
  class="margin-top-small"
>
  <h2
    class="margin-top-small"
  >
    Organization and billing
  </h2>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <div
      class="margin-top-small org-settings-item"
    >
      <li
        class="MuiListItem-root flexbox column MuiListItem-gutters Mui-disabled MuiListItem-alignItemsFlexStart"
        disabled=""
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
          style="display: grid; width: 100%; margin-bottom: 8px;"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
          >
            Organization name
          </span>
          <div
            class="MuiTypography-root MuiListItemText-secondary two-columns MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            style="display: grid; width: 100%; margin-bottom: 8px;"
          >
            <div>
              test
            </div>
            <a
              class="align-right"
            />
          </div>
        </div>
        <hr
          class="MuiDivider-root"
          style="margin-bottom: 8px; margin-left: -16px; width: 500px;"
        />
      </li>
    </div>
    <div
      class="margin-top-small org-settings-item"
    >
      <li
        class="MuiListItem-root flexbox column MuiListItem-gutters Mui-disabled MuiListItem-alignItemsFlexStart"
        disabled=""
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
          style="display: grid; width: 100%; margin-bottom: 0px;"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
          >
            <div>
              <span
                style="padding-right: 10px;"
              >
                Organization token
              </span>
              <div
                class="tooltip info"
                currentitem="false"
                data-event="click focus"
                data-for="token-help"
                data-tip="true"
                id="token-info"
                style="position: relative; display: inline; top: 6px;"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                  />
                </svg>
              </div>
              <div
                class="__react_component_tooltip place-top type-dark"
                data-id="tooltip"
                id="token-help"
              >
                <h3>
                  Organization token
                </h3>
                <p
                  style="color: rgb(222, 207, 217); margin: 1em 0px;"
                >
                  This token is unique for your organization and ensures that only devices that you own are able to connect to your account.
                </p>
              </div>
            </div>
          </span>
          <div
            class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            style="display: grid; width: 100%; margin-bottom: 0px;"
          >
            <div
              style="width: 468px;"
            >
              <div
                class="MuiListItem-root attributes Mui-disabled"
                disabled=""
              >
                <div
                  class="MuiListItemText-root"
                >
                  <div
                    class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                    title="test"
                  >
                    <div>
                      <span
                        class="break-all inventory-text tenant-token-text"
                      >
                        test
                      </span>
                       
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
          style="margin-bottom: 8px; margin-left: -16px; width: 500px;"
        />
      </li>
      <div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4l6 6v10c0 1.1-.9 2-2 2H7.99C6.89 23 6 22.1 6 21l.01-14c0-1.1.89-2 1.99-2h7zm-1 7h5.5L14 6.5V12z"
                />
              </svg>
            </span>
            Copy to clipboard
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          style="height: 30px; padding: 15px;"
        />
      </div>
    </div>
    <div
      class="margin-top-small org-settings-item"
    >
      <li
        class="MuiListItem-root flexbox column MuiListItem-gutters Mui-disabled MuiListItem-alignItemsFlexStart"
        disabled=""
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
          style="display: grid; width: 100%; margin-bottom: 8px;"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
          >
            Current plan
          </span>
          <div
            class="MuiTypography-root MuiListItemText-secondary two-columns MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            style="display: grid; width: 100%; margin-bottom: 8px;"
          >
            <div>
              Trial
            </div>
            <a
              class="align-right"
              href="https://mender.io/plans/pricing"
              rel="noopener noreferrer"
              target="_blank"
            >
              Compare product plans
            </a>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
          style="margin-bottom: 8px; margin-left: -16px; width: 500px;"
        />
        <div
          class="flexbox centered text-muted"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
          <span
            class="margin-left-small"
          >
            Your trial expires in 
            6 months
            . 
            <a
              href="/settings/upgrade"
            >
              Upgrade to a paid plan
            </a>
          </span>
        </div>
      </li>
    </div>
    <div
      class="margin-top-small org-settings-item"
    >
      <li
        class="MuiListItem-root flexbox column MuiListItem-gutters Mui-disabled MuiListItem-alignItemsFlexStart"
        disabled=""
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline"
          style="display: grid; width: 100%; margin-bottom: 8px;"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
          >
            Current add-ons
          </span>
          <div
            class="MuiTypography-root MuiListItemText-secondary two-columns MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            style="display: grid; width: 100%; margin-bottom: 8px;"
          >
            <div>
              You currently don't have any add-ons
            </div>
            <a
              class="align-right"
            >
              Purchase an add-on
            </a>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
          style="margin-bottom: 8px; margin-left: -16px; width: 500px;"
        />
        <div
          class="flexbox centered text-muted"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
          <span
            class="margin-left-small"
          >
            Your trial expires in 
            6 months
            . 
            <a
              href="/settings/upgrade"
            >
              Upgrade to a paid plan
            </a>
          </span>
        </div>
      </li>
      <div
        class="margin-left-small margin-bottom"
      >
        <a
          class="flexbox center-aligned"
          href="https://mender.io/plans/pricing"
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            style="max-width: 200px;"
          >
            Compare plans and add-ons at mender.io
          </div>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </div>
    </div>
  </ul>
  <p
    class="margin-left-small margin-right-small"
    style="max-width: 500px;"
  >
    <a
      href=""
    >
      End trial
       and deactivate account
    </a>
  </p>
</div>
`;

exports[`smaller components renders CancelSubscriptionAlert correctly 1`] = `
<div
  class="margin-top-large alert alert-error"
  style="max-width: 500px;"
>
  <p>
    We've started the process to cancel your plan and deactivate your account.
  </p>
  <p>
    We'll send you an email confirming your deactivation. If you have any question at all, contact us at
     
    <strong>
      <a
        href="mailto:support@mender.io"
      >
        support@mender.io
      </a>
    </strong>
  </p>
</div>
`;

exports[`smaller components renders CancelSubscriptionButton correctly 1`] = `
<p
  class="margin-left-small margin-right-small"
  style="max-width: 500px;"
>
  <a
    href=""
  >
    End trial
     and deactivate account
  </a>
</p>
`;

exports[`smaller components renders DeviceLimitExpansionNotification correctly 1`] = `
<div
  class="flexbox centered text-muted"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
    />
  </svg>
  <span
    class="margin-left-small"
  >
    To increase your device limit,
     
    <a
      href="/settings/upgrade"
    >
      upgrade to a paid plan
    </a>
    .
  </span>
</div>
`;

exports[`smaller components renders OrgHeader correctly 1`] = `
<div>
  <span
    style="padding-right: 10px;"
  >
    Organization token
  </span>
  <div
    class="tooltip info"
    currentitem="false"
    data-event="click focus"
    data-for="token-help"
    data-tip="true"
    id="token-info"
    style="position: relative; display: inline; top: 6px;"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
  <div
    class="__react_component_tooltip place-top type-dark"
    data-id="tooltip"
    id="token-help"
  >
    <h3>
      Organization token
    </h3>
    <p
      style="color: rgb(222, 207, 217); margin: 1em 0px;"
    >
      This token is unique for your organization and ensures that only devices that you own are able to connect to your account.
    </p>
  </div>
</div>
`;

exports[`smaller components renders TrialExpirationNote correctly 1`] = `
<div
  class="flexbox centered text-muted"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
    />
  </svg>
  <span
    class="margin-left-small"
  >
    Your trial expires in 
    9 months
    . 
    <a
      href="/settings/upgrade"
    >
      Upgrade to a paid plan
    </a>
  </span>
</div>
`;
